feat(web): expose task summaries and run history